--- a/style.css
+++ b/style.css
@@ -484,10 +484,11 @@ p.copyright a:hover {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 54vw;
+    width: 79vw;
   }
   .nav-links a {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
+    font-weight: bold;
     color: rgb(255, 255, 255, 0.9);
   }
   .nav-links a:hover {
@@ -504,8 +505,8 @@ p.copyright a:hover {
     display: none;
   }
   .main-section h1 {
-    font-size: 4rem;
-    color: rgb(255, 255, 255, 0.9);
+    font-size: 5rem;
+    color: rgb(255, 255, 255);
   }
   .main-section p {
     font-size: 2rem;
