--- a/style.css
+++ b/style.css
@@ -484,11 +484,12 @@ p.copyright a:hover {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 79vw;
+    width: 59vw;
   }
   .nav-links a {
     font-size: 1.6rem;
     font-weight: bold;
+    margin-right: 1rem;
     color: rgb(255, 255, 255, 0.9);
   }
   .nav-links a:hover {
